Better way to make sure the line number stays readable

--- a/debugger.less
+++ b/debugger.less
@@ -1,9 +1,8 @@
 .CodeMirror-gutter-text pre {
 	position:relative;
-	padding-right: 4px;
 	&:after {
 		position: absolute;
-		top: 0; left: 0; bottom: 0; right: 0;
+		top: 0; left: -4px; bottom: 0; right: -6px;
 		z-index: -1;
 	}
 	&.breakpoint {
